Removed «Labsmedia» from all files. Will add redirects on the main old labsmedia's website soon to reflect these changes.

--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,3 @@
-Installation steps should be found on http://www.labsmedia.com/clickheat/installation.html
+Installation steps should be found on http://www.dugwood.com/clickheat/installation.html
 
-La description de l'installation devrait se trouver sur http://www.labsmedia.fr/clickheat/installation.html
+La description de l'installation devrait se trouver sur http://www.dugwood.fr/clickheat/installation.html
